[package]
name = "sis-password-manager-file-converter"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
clap = { features = ["derive", "env"], version = "4.5.32" }
clap_derive = "4.5.32"
csv = "1.3.1"
rand = "0.9.0"
serde = { features = ["derive", "rc"], version = "1.0.219" }
serde_json = "1.0.140"
uuid = { features = ["v7"], version = "1.16.0" }
